# Shippo

./: .gitignore  .shippo.example.toml  .shippo.toml  Cargo.toml  README.md
.github/workflows/: auto-version-tag.yml  ci.yml  release.yml
crates/shippo/: Cargo.toml  README.md
crates/shippo/src/: main.rs
crates/shippo_builders/: Cargo.toml
crates/shippo_builders/src/: lib.rs
crates/shippo_core/: Cargo.toml
crates/shippo_core/src/: lib.rs
crates/shippo_git/: Cargo.toml
crates/shippo_git/src/: lib.rs
crates/shippo_pack/: Cargo.toml
crates/shippo_pack/src/: lib.rs
crates/shippo_pack/tests/: packaging.rs
crates/shippo_publish/: Cargo.toml
crates/shippo_publish/src/: lib.rs
docs/: config.md  github-actions.md  sbom.md  signing.md  troubleshooting.md
tests/fixtures/go-hello/: go.mod
tests/fixtures/node-frontend/: README.md  package.json
tests/fixtures/python-wheel/: pyproject.toml
