[package]
name = "shippo"
version = "0.1.11"
edition = "2021"
authors = ["Shippo Authors"]
license = "MIT"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
camino.workspace = true
toml.workspace = true
shippo_core = { path = "../shippo_core" }
shippo_builders = { path = "../shippo_builders" }
shippo_pack = { path = "../shippo_pack" }
shippo_git = { path = "../shippo_git" }
shippo_publish = { path = "../shippo_publish" }
