[package]
name = "shippo-release"
version = "0.1.28"
edition = "2021"
authors = ["Pol Sala"]
license = "MIT"
description = "Shippo: polyglot release orchestrator for Rust, Go, Node, and Python"
repository = "https://github.com/polsala/Shippo"
homepage = "https://github.com/polsala/Shippo"
readme = "../../README.md"
publish = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
camino.workspace = true
toml.workspace = true
shippo_core = { path = "../shippo_core" }
shippo_builders = { path = "../shippo_builders" }
shippo_pack = { path = "../shippo_pack" }
shippo_git = { path = "../shippo_git" }
shippo_publish = { path = "../shippo_publish" }
