[package]
name = "shippo_builders"
version = "0.1.31"
edition = "2021"
authors = ["Pol Sala"]
license = "MIT"
description = "Language-specific builders for Shippo (Rust, Go, Node, Python)"
repository = "https://github.com/polsala/Shippo"
homepage = "https://github.com/polsala/Shippo"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
camino.workspace = true
serde.workspace = true
shippo_core = { version = "0.1.30", path = "../shippo_core" }
which.workspace = true
tracing.workspace = true
tempfile.workspace = true
walkdir.workspace = true
ignore.workspace = true
