[package]
name = "shippo_core"
version = "0.1.32"
edition = "2021"
authors = ["Pol Sala"]
license = "MIT"
description = "Core models and planning logic for Shippo"
repository = "https://github.com/polsala/Shippo"
homepage = "https://github.com/polsala/Shippo"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
camino.workspace = true
regex.workspace = true
chrono.workspace = true
semver.workspace = true
walkdir.workspace = true
ignore.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
