[package]
name = "shippo_git"
version = "0.1.29"
edition = "2021"
authors = ["Pol Sala"]
license = "MIT"
description = "Git helpers for Shippo"
repository = "https://github.com/polsala/Shippo"
homepage = "https://github.com/polsala/Shippo"
readme = "../../README.md"
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
