[package]
name = "shippo_publish"
version = "0.1.32"
edition = "2021"
authors = ["Pol Sala"]
license = "MIT"
description = "GitHub release publisher for Shippo"
repository = "https://github.com/polsala/Shippo"
homepage = "https://github.com/polsala/Shippo"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shippo_core = { version = "0.1.32", path = "../shippo_core" }
shippo_git = { version = "0.1.32", path = "../shippo_git" }
percent-encoding.workspace = true
